Correction d'un bug sur le bouton recherche en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,7 @@ main {
        font-family: var(--font);
        font-size: 0.795em;
        padding: 14px;
+       border-radius: 0px;
 }
 .form_input:focus {
        outline: none;
